--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
+	<head>
+		<title>Prueba de Git</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
+	</head>
 	<body>
 		<h1>Hola que tal?</h1>
 		<h2>Todo bien.</h2>
